// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`componentsRenderer happy path 1`] = `
Array [
  Array [
    null,
    Array [
      undefined,
    ],
  ],
]
`;

exports[`componentsRenderer has errors 1`] = `
Array [
  Array [
    Array [
      "something bad happened",
    ],
    Array [
      undefined,
    ],
  ],
]
`;
